# hstsparser

./: .gitignore  .packit.yaml  LICENSE  Makefile  README.md  azure-pipelines.yml  hstsparser.py  hstsparser.spec  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yaml  codeql-analysis.yml  lint.yaml  release.yaml
azure-pipelines/: lint-pipeline.yml  release-pipeline.yml
hooks/: hook-prettytable.py
hstsparser/: __init__.py  __main__.py  constants.py  utils.py
