[tool.poetry]
name = "hstsparser"
version = "0.1.0"
description = "A tool to parse Firefox and Chrome HSTS databases into forensic artifacts."
authors = ["Daniel Milnes <thebeanogamer@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thebeanogamer/hstsparser"
repository = "https://github.com/thebeanogamer/hstsparser"
documentation = "https://github.com/thebeanogamer/hstsparser"
keywords = ["chrome", "firefox", "dfir", "forensics", "hsts"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4"
PTable = "^0.9.2"

[tool.poetry.dev-dependencies]
flake8 = "=3.9.0"
flake8-bandit = "=2.1.2"
flake8-bugbear = "=20.1.4"
flake8-import-order = "=0.18.1"
flake8-string-format = "=0.3.0"
flake8-tidy-imports = "=4.1.0"
flake8-todo = "=0.7"
safety = "=1.9.0"
dodgy = "=0.2.1"
pyinstaller = "^3.6"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"
flake8-formatter-junit-xml = "^0.0.6"

[tool.poetry.scripts]
hstsparser = "hstsparser:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

