[tool.poetry]
name = "hstsparser"
version = "0.1.0"
description = "A tool to parse Firefox and Chrome HSTS databases into forensic artifacts."
authors = ["Daniel Milnes <daniel@daniel-milnes.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thebeanogamer/hstsparser"
repository = "https://github.com/thebeanogamer/hstsparser"
documentation = "https://github.com/thebeanogamer/hstsparser"
keywords = ["chrome", "firefox", "dfir", "forensics", "hsts"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
prettytable = "^0.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.5.9"
flake8-import-order = "^0.18.2"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.8.0"
flake8-todo = "^0.7"
safety = "^2.3.5"
flake8-formatter-junit-xml = "^0.0.6"

[tool.poetry.scripts]
hstsparser = "hstsparser:main"

[tool.poetry.group.windows.dependencies]


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.11.0"
pywin32-ctypes = "^0.2.0"
pefile = "^2023.2.7"

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"

